# NavFuse

./: .coveralls.yml  .gitignore  CMakeLists.txt  LICENSE  README.md
.github/workflows/: automated-testing.yml
data/: description.txt
include/filter/: BaseFilter.hpp  BatchLeastSquares.hpp  KalmanFilter.hpp  UnscentedKalmanFilter.hpp
include/inertial/: compensator.hpp  errorDynamics.hpp  initialization.hpp  pvaErrorDynamics.hpp  strapdown.hpp
include/rotations/: DirectionCosinesMatrix.hpp  EulerAngles.hpp  Quaternion.hpp  RotationVector.hpp
include/sensors/: GPS.hpp  IMU.hpp  gps.hpp
include/util/: Attitude.hpp  DirectionCosinesMatrix.hpp  EulerAngles.hpp  Gravity.hpp  NavUtils.hpp  Quaternion.hpp  RotationVector.hpp  Rotations.hpp  dataTypes.hpp
src/filter/: BaseFilter.cpp  BatchLeastSquares.cpp  KalmanFilter.cpp  UnscentedKalmanFilter.cpp
src/inertial/: compensator.cpp  errorDynamics.cpp  initialization.cpp  pvaErrorDynamics.cpp  strapdown.cpp
src/rotations/: DirectionCosinesMatrix.cpp  Quaternion.cpp
src/sensors/: GPS.cpp  IMU.cpp  gps.cpp
src/util/: Attitude.cpp  Gravity.cpp  NavUtils.cpp  Quaternion.cpp  Rotations.cpp
test/: AttitudeTest.cpp  BaseFilterTest.cpp  BatchLeastSquaresTest.cpp  CompensatorTest.cpp  DirectionCosinesMatrixTest.cpp  GravityTest.cpp  InitializationTest.cpp  KalmanFilterTest.cpp  NavUtilsTest.cpp  PvaErrorDynamicsTest.cpp  QuaternionTest.cpp  RotationsTest.cpp  StrapdownTest.cpp  UnscentedKalmanFilterTest.cpp  testMain.cpp
test/testData/: EOP-Last5Years.csv
